--- a/templates/error.html
+++ b/templates/error.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block innercontent %}
+{% block container %}
 	<h1>Oops...</h1>
 	<p>{{ error }}</p>
 {% endblock %}
