--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,3 +15,9 @@ body {
 #subnav-spacer {
 	height: 50px;
 }
+
+.page-header {
+	margin-top: -20px;
+	padding-bottom: 0;
+	border-bottom: 1px solid #BBB;
+}
