--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,10 @@
 {% extends 'bootstrap/base.html' %}
 
+{% block styles %}
+	{{ super() }}
+	<link rel="stylesheet" href="{{ url_for('.static', filename='css/style.css') }}" />
+{% endblock %}
+
 {% block navbar %}
 	<div class="navbar navbar-inverse navbar-fixed-top navbar-primary" role="navigation">
 		<div class="container">
@@ -15,8 +20,13 @@
 			<div class="collapse navbar-collapse">
 				<ul class="nav navbar-nav navbar-right">
 					{% block menu %}
-					<li {% if active_page == 'new' %}class="active"{% endif %}><a href="/new">New Paste</a></li>
-					<li {% if active_page == 'list' %}class="active"{% endif %}><a href="/list">List Pastes</a></li>
+						{% if session.user %}
+							<li {% if active_page == 'new' %}class="active"{% endif %}><a href="/new">New Paste</a></li>
+							<li {% if active_page == 'list' %}class="active"{% endif %}><a href="/list">List Pastes</a></li>
+							<li><a href="/logout">Logout</a></li>
+						{% else %}
+							<li><a href="/login">Login</a></li>
+						{% endif %}
 					{% endblock %}
 				</ul>
 			</div>
@@ -50,11 +60,6 @@
 	{% endblock %}
 {% endblock %}
 
-{% block styles %}
-	{{ super() }}
-	<link rel="stylesheet" href="{{ url_for('.static', filename='css/style.css') }}" />
-{% endblock %}
-
 {% block content %}
 	<div class="container" role="main">
 		{% block messages %}
@@ -64,6 +69,15 @@
 				{% endfor %}
 			{% endwith %}
 		{% endblock %}
-		{% block innercontent %}{% endblock %}
+
+		<div class="page-header">
+			<h1>
+				{% block title %}
+					{{ title }}
+				{% endblock %}
+			</h1>
+		</div>
+		
+		{% block container %}{% endblock %}
 	</div>
 {% endblock %}
