--- a/templates/delete.html
+++ b/templates/delete.html
@@ -1,3 +1,21 @@
 {% extends 'base.html' %}
 
 {% set active_page = 'delete' %}
+
+{% block title %}
+	Delete '{{ title|trim }}'
+{% endblock %}
+
+{% block container %}
+	<p>Are you sure you want to delete this paste? There is no going back!</p>
+	<form class="form-horizontal" method="post">
+		<fieldset>
+			<!-- Confirm -->
+			<div class="form-group">
+				<div class="col-md-2">
+					<button type="submit" id="submit" name="submit" class="btn btn-default">Delete</button>
+				</div>
+			</div>
+		</fieldset>
+	</form>
+{% endblock %}
