--- a/templates/error.html
+++ b/templates/error.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
+{% set title = 'Oops...' %}
+
 {% block container %}
-	<h1>Oops...</h1>
 	<p>{{ error }}</p>
 {% endblock %}
