--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,6 @@
 {% extends 'bootstrap/base.html' %}
 
+{# If title and/or content are not specifically defined, auto-load them from the repo object. #}
 {% if repo is defined %}
 	{% if title is not defined %}
 		{% set title = repo.get_title() %}
@@ -39,7 +40,7 @@
 							<li {% if active_page == 'new' %}class="active"{% endif %}><a href="/new">New Paste</a></li>
 						{% endif %}
 						<li {% if active_page == 'list' %}class="active"{% endif %}><a href="/list">List Pastes</a></li>
-						{% if session.user %}
+						{% if session.user is defined and not session.user.is_anon %}
 							<li><a href="/logout">Logout</a></li>
 						{% else %}
 							<li><a href="/login">Login</a></li>
@@ -49,37 +50,35 @@
 			</div>
 		</div>
 	</div>
-	{% block subnavbar %}
-		{% if repo is defined and (repo.are_owner or repo.commits|length > 1) %}
-			<div class="navbar navbar-inverse navbar-fixed-top navbar-secondary" role="navigation">
-				<div class="container">
-					<div class="navbar-header">
-						<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-							<span class="sr-only">Toggle navigation</span>
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-						</button>
-					</div>
-					<div class="collapse navbar-collapse">
-						<ul class="nav navbar-nav narbar-right">
-							{% block submenu %}
-								<li {% if active_page == 'view' %}class="active"{% endif %}><a href="{{ url_for('view', rid=repo.id) }}">View</a></li>
-								{% if repo is defined and repo.are_owner %}
-									<li {% if active_page == 'edit' %}class="active"{% endif %}><a href="{{ url_for('edit', rid=repo.id) }}">Edit</a></li>
-									<li {% if active_page == 'delete' %}class="active"{% endif %}><a href="{{ url_for('delete', rid=repo.id) }}">Delete</a></li>
-								{% endif %}
-								{% if repo is defined and repo.commits|length > 1 %}
-									<li {% if active_page == 'history' %}class="active"{% endif %}><a href="{{ url_for('history', rid=repo.id) }}">History</a></li>
-								{% endif %}
-							{% endblock %}
-						</ul>
-					</div>
+	{% if repo is defined and (repo.are_owner or repo.commits|length > 1) %}
+		<div class="navbar navbar-inverse navbar-fixed-top navbar-secondary" role="navigation">
+			<div class="container">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+				</div>
+				<div class="collapse navbar-collapse">
+					<ul class="nav navbar-nav narbar-right">
+						{% block submenu %}
+							<li {% if active_page == 'view' %}class="active"{% endif %}><a href="{{ url_for('view', rid=repo.id) }}">View</a></li>
+							{% if repo is defined and repo.are_owner %}
+								<li {% if active_page == 'edit' %}class="active"{% endif %}><a href="{{ url_for('edit', rid=repo.id) }}">Edit</a></li>
+								<li {% if active_page == 'delete' %}class="active"{% endif %}><a href="{{ url_for('delete', rid=repo.id) }}">Delete</a></li>
+							{% endif %}
+							{% if repo is defined and repo.commits|length > 1 %}
+								<li {% if active_page == 'history' %}class="active"{% endif %}><a href="{{ url_for('history', rid=repo.id) }}">History</a></li>
+							{% endif %}
+						{% endblock %}
+					</ul>
 				</div>
 			</div>
-			<div id="subnav-spacer"></div>
-		{% endif %}
-	{% endblock %}
+		</div>
+		<div id="subnav-spacer"></div>
+	{% endif %}
 {% endblock %}
 
 {% block content %}
