--- a/templates/view.html
+++ b/templates/view.html
@@ -1,3 +1,12 @@
 {% extends 'base.html' %}
 
 {% set active_page = 'view' %}
+
+{% block messages %}
+	{{ super() }}
+	{% if repo.rev != repo.head.commit %}
+		<div class="alert alert-info">
+			You're viewing an older revision of this paste. View the <a href="{{ url_for('view', rid=repo.id) }}">current revision</a>.
+		</div>
+	{% endif %}
+{% endblock %}
