--- a/templates/base.html
+++ b/templates/base.html
@@ -102,3 +102,14 @@
 		{% block container %}{% endblock %}
 	</div>
 {% endblock %}
+
+{% block footer %}
+	<div id="footer">
+		<div class="container">
+			<p class="muted credit">
+				Page request took __EXECUTION_TIME__ seconds.<br />
+				Powered by <a href="https://github.com/MaienM/PasteGit.git">PasteGit</a>. Copyright &copy; 2014 Michon van Dooren.
+			</p>
+		</div>
+	</div>
+{% endblock %}
