--- a/templates/bootstrap.html
+++ b/templates/bootstrap.html
@@ -22,6 +22,8 @@
                     {%- endblock navbar %}
                     {% block content -%}
                     {%- endblock content %}
+                    {% block footer -%}
+                    {%- endblock footer %}
 
                     {% block scripts %}
                         <script src="{{ url_for('.static', filename='bower_components/jquery/dist/jquery.min.js') }}"></script>
