--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,10 +3,6 @@ body {
 	padding-top: 64px;
 }
 
-#subnav-spacer {
-	height: 50px;
-}
-
 /* Navbar styling */
 .navbar-primary {
 }
@@ -15,6 +11,10 @@ body {
 	top: 50px;
 	background-color: #444;
 	border-color: #282828;
+}
+
+.navbar-secondary + .container {
+	padding-top: 50px;
 }
 
 /* Page title */
@@ -35,10 +35,13 @@ html, body {
 }
 body > .container { 
 	min-height: 100%;
-	padding-bottom: 50px;
+	padding-bottom: 76px;
 }
 #footer {
-	height: 50px;
-	margin-top: -50px;
+	height: 60px;
+	padding-top: 10px;
+	margin-top: -60px;
 	clear: both;
+
+	background-color: #F5F5F5;
 }
