--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,7 @@
 {% extends 'bootstrap.html' %}
 
+{% import 'macros.html' as macros %}
+
 {# If title and/or content are not specifically defined, auto-load them from the repo object. #}
 {% if repo is defined %}
 	{% if title is not defined %}
@@ -17,8 +19,8 @@
 {% endblock %}
 
 {% block scripts %}
-	{{super()}}
-	<script src="{{url_for('.static', filename='bower_components/bootstrap-jasny/dist/js/jasny-bootstrap.min.js')}}" type="text/javascript"></script>
+	{{ super() }}
+	<script src="{{ url_for('.static', filename='bower_components/bootstrap-jasny/dist/js/jasny-bootstrap.min.js') }}" type="text/javascript"></script>
 {% endblock %}
 
 {% block navbar %}
@@ -31,19 +33,19 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="{{ url_for('index') }}">PasteGit</a>
+				{{ macros.link_to('PasteGit', 'index', class='navbar-brand') }}
 			</div>
 			<div class="collapse navbar-collapse">
 				<ul class="nav navbar-nav navbar-right">
 					{% block menu %}
 						{% if session.user %}
-						<li {{ active_if(active_page == 'new') }}><a href="{{ url_for('new') }}">New Paste</a></li>
+							{{ macros.menu_for('New Paste', 'new') }}
 						{% endif %}
-						<li {{ active_if(active_page == 'list') }}><a href="{{ url_for('list') }}">List Pastes</a></li>
+							{{ macros.menu_for('List Pastes', 'list') }}
 						{% if session.user is defined and not session.user.is_anon %}
-							<li><a href="{{ url_for('logout') }}">Logout</a></li>
+							{{ macros.menu_for('Logout', 'logout') }}
 						{% else %}
-							<li><a href="{{ url_for('login') }}">Login</a></li>
+							{{ macros.menu_for('Login', 'login') }}
 						{% endif %}
 					{% endblock %}
 				</ul>
@@ -64,13 +66,13 @@
 				<div class="collapse navbar-collapse">
 					<ul class="nav navbar-nav narbar-right">
 						{% block submenu %}
-							<li {{ active_if(active_page == 'view') }}><a href="{{ url_for('view', rid=repo.id, rev=repo.rev.hexsha) }}">View</a></li>
+							{{ macros.menu_for('View', 'view', rid=repo.id, rev=repo.rev.hexsha) }}
 							{% if repo is defined and repo.are_owner %}
-								<li {{ active_if(active_page == 'edit') }}><a href="{{ url_for('edit', rid=repo.id) }}">Edit</a></li>
-								<li {{ active_if(active_page == 'delete') }}><a href="{{ url_for('delete', rid=repo.id) }}">Delete</a></li>
+								{{ macros.menu_for('Edit', 'edit', rid=repo.id) }}
+								{{ macros.menu_for('Delete', 'delete', rid=repo.id) }}
 							{% endif %}
 							{% if repo is defined and repo.commits|length > 1 %}
-								<li {{ active_if(active_page == 'history') }}><a href="{{ url_for('history', rid=repo.id, rev=repo.rev.hexsha) }}">History</a></li>
+								{{ macros.menu_for('History', 'history', rid=repo.id, rev=repo.rev.hexsha) }}
 							{% endif %}
 						{% endblock %}
 					</ul>
