--- a/templates/base.html
+++ b/templates/base.html
@@ -38,21 +38,21 @@
 			<div class="collapse navbar-collapse">
 				<ul class="nav navbar-nav navbar-right">
 					{% block menu %}
-						{% if session.user %}
+						{% if g.user.can_create() %}
 							{{ macros.menu_for('New Paste', 'new') }}
 						{% endif %}
-							{{ macros.menu_for('List Pastes', 'list') }}
-						{% if session.user is defined and not session.user.is_anon %}
-							{{ macros.menu_for('Logout', 'logout') }}
-						{% else %}
+						{{ macros.menu_for('List Pastes', 'list') }}
+						{% if g.user.is_anon() %}
 							{{ macros.menu_for('Login', 'login') }}
+						{% else %}
+							{{ macros.menu_for('Logout', 'logout') }}
 						{% endif %}
 					{% endblock %}
 				</ul>
 			</div>
 		</div>
 	</div>
-	{% if repo is defined and (repo.are_owner or repo.commits|length > 1) %}
+	{% if repo is defined and (g.user.can_edit(repo) or g.user.can_delete(repo) or repo.has_history) %}
 		<div class="navbar navbar-inverse navbar-fixed-top navbar-secondary" role="navigation">
 			<div class="container">
 				<div class="navbar-header">
@@ -67,11 +67,13 @@
 					<ul class="nav navbar-nav narbar-right">
 						{% block submenu %}
 							{{ macros.menu_for('View', 'view', rid=repo.id, rev=repo.rev.hexsha) }}
-							{% if repo is defined and repo.are_owner %}
+							{% if repo is defined and g.user.can_edit(repo) %}
 								{{ macros.menu_for('Edit', 'edit', rid=repo.id) }}
+							{% endif %}
+							{% if repo is defined and g.user.can_delete(repo) %}
 								{{ macros.menu_for('Delete', 'delete', rid=repo.id) }}
 							{% endif %}
-							{% if repo is defined and repo.commits|length > 1 %}
+							{% if repo is defined and repo.has_history %}
 								{{ macros.menu_for('History', 'history', rid=repo.id, rev=repo.rev.hexsha) }}
 							{% endif %}
 						{% endblock %}
