--- a/templates/index.html
+++ b/templates/index.html
@@ -3,9 +3,5 @@
 {% set title = 'PasteGit' %}
 
 {% block container %}
-	{% if session.user %}
-		Welcome {{ session.user.name }}. Please use the top links to get around.
-	{% else %}
-		Welcome new, mysterious person. Please, do tell me who you are.
-	{% endif %}
+	Welcome {{ g.user.name }}. Please use the top links to get around.
 {% endblock %}
