Added a message for when there are no pastes.

--- a/templates/list.html
+++ b/templates/list.html
@@ -32,6 +32,12 @@
 						{{ repo.language.name }}
 					</td>
 				</tr>
+			{% else %}
+				<tr>
+					<td colspan="3">
+						We don't see to have any pastes yet.
+					</td>
+				</tr>
 			{% endfor %}
 		</tbody>
 	</table>
