--- a/templates/edit.html
+++ b/templates/edit.html
@@ -14,13 +14,19 @@
 	{% endif %}
 {% endblock %}
 
+{% block scripts %}
+	{{ super() }}
+	<script src="{{ url_for('.static', filename='bower_components/epiceditor/epiceditor/js/epiceditor.min.js') }}" type="text/javascript"></script>
+	<script src="{{ url_for('.static', filename='js/script.js') }}" type="text/javascript"></script>
+{% endblock %}
+
 {% block container %}
 	<form class="form-horizontal" method="post">
 		<fieldset>
 			<!-- Title -->
 			<div class="form-group">
 				<label class="col-md-2 control-label" for="title">Title</label>  
-				<div class="col-md-8">
+				<div class="col-md-10">
 					<input id="title" name="title" type="text" placeholder="Title" class="form-control input-md" required value="{{ title }}" />
 				</div>
 			</div>
@@ -28,7 +34,7 @@
 			<!-- Text input-->
 			<div class="form-group">
 				<label class="col-md-2 control-label" for="message">Commit Message</label>  
-				<div class="col-md-8">
+				<div class="col-md-10">
 					<input id="message" name="message" type="text" placeholder="Commit Message" class="form-control input-md" required value="{{ message }}" />
 				</div>
 			</div>
@@ -50,8 +56,9 @@
 			<!-- Content -->
 			<div class="form-group">
 				<label class="col-md-2 control-label" for="content">Content</label>
-				<div class="col-md-2">                     
-					<textarea class="form-control" id="content" name="content" required>{{ content }}</textarea>
+				<div class="col-md-10">                     
+					<div id="epiceditor"></div>
+					<textarea class="hidden" id="content" name="content">{{ content }}</textarea>
 				</div>
 			</div>
 
