--- a/templates/view/markdown.html
+++ b/templates/view/markdown.html
@@ -1,7 +1,17 @@
 {% extends 'view.html' %}
 
+{% block scripts %}
+	{{ super() }}
+	<script src="{{ url_for('.static', filename='bower_components/marked/lib/marked.js') }}" type="text/javascript"></script>
+	<script type="text/javascript">
+		$(function() {
+			$('.markdown').each(function() {
+				$(this).html(marked($(this).html()));
+			});
+		});
+	</script>
+{% endblock %}
+
 {% block container %}
-	<div class="markdown">
-		{{ content|safe }}
-	</div>
+	<div class="markdown">{{ content }}</div>
 {% endblock %}
