--- a/templates/view/markdown.html
+++ b/templates/view/markdown.html
@@ -1,5 +1,10 @@
 {% extends 'view.html' %}
 
+{% block styles %}
+	{{ super() }}
+	<link rel="stylesheet" type="text/css" href="{{ url_for('.static', filename='css/toc.css') }}" media="screen" />
+{% endblock %}
+
 {% block scripts %}
 	{{ super() }}
 	<script src="{{ url_for('.static', filename='bower_components/marked/lib/marked.js') }}" type="text/javascript"></script>
@@ -10,8 +15,14 @@
 			});
 		});
 	</script>
+	<script src="{{ url_for('.static', filename='js/toc.js') }}" type="text/javascript"></script>
 {% endblock %}
 
 {% block container %}
 	<div class="markdown">{{ content }}</div>
+	<div id="toc" class="bs-docs-sidebar col-xs-1 toc">
+		<ul class="nav nav-stacked fixed">
+		</ul>
+	</div>
 {% endblock %}
+
