--- a/templates/view/markdown.html
+++ b/templates/view/markdown.html
@@ -8,18 +8,12 @@
 {% block scripts %}
 	{{ super() }}
 	<script src="{{ url_for('.static', filename='bower_components/marked/lib/marked.js') }}" type="text/javascript"></script>
-	<script type="text/javascript">
-		$(function() {
-			$('.markdown').each(function() {
-				$(this).html(marked($(this).html()));
-			});
-		});
-	</script>
+	<script src="{{ url_for('.static', filename='js/view.js') }}" type="text/javascript"></script>
 	<script src="{{ url_for('.static', filename='js/toc.js') }}" type="text/javascript"></script>
 {% endblock %}
 
 {% block container %}
-	<div class="markdown">{{ content }}</div>
+	<div id="markdown" class="markdown hidden">{{ content|safe }}</div>
 	<div id="toc" class="bs-docs-sidebar col-xs-1 toc">
 		<ul class="nav nav-stacked fixed">
 		</ul>
