--- a/templates/edit.html
+++ b/templates/edit.html
@@ -17,7 +17,7 @@
 {% block scripts %}
 	{{ super() }}
 	<script src="{{ url_for('.static', filename='bower_components/epiceditor/epiceditor/js/epiceditor.min.js') }}" type="text/javascript"></script>
-	<script src="{{ url_for('.static', filename='js/script.js') }}" type="text/javascript"></script>
+	<script src="{{ url_for('.static', filename='js/edit.js') }}" type="text/javascript"></script>
 {% endblock %}
 
 {% block container %}
