--- a/templates/view/markdown.html
+++ b/templates/view/markdown.html
@@ -3,6 +3,7 @@
 {% block styles %}
 	{{ super() }}
 	<link rel="stylesheet" type="text/css" href="{{ url_for('.static', filename='css/toc.css') }}" media="screen" />
+	<link rel="stylesheet" type="text/css" href="{{ url_for('.static', filename='css/markdown.css') }}" media="screen" />
 {% endblock %}
 
 {% block scripts %}
