--- a/templates/edit.html
+++ b/templates/edit.html
@@ -20,7 +20,7 @@
 	<script src="{{ url_for('.static', filename='js/edit.js') }}" type="text/javascript"></script>
 {% endblock %}
 
-{% block container %}
+{% block content %}
 	<form class="form-horizontal" method="post">
 		<fieldset>
 			<!-- Title -->
