--- a/templates/history.html
+++ b/templates/history.html
@@ -6,7 +6,7 @@
 	History of '{{ title }}'
 {% endblock %}
 
-{% block container %}
+{% block content %}
 	<table class="table table-striped table-hover rowlink" data-link="row">
 		<thead>
 			<tr>
