--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,6 @@
 
 {% set title = 'PasteGit' %}
 
-{% block container %}
+{% block content %}
 	Welcome {{ g.user.name }}. Please use the top links to get around.
 {% endblock %}
