--- a/templates/list.html
+++ b/templates/list.html
@@ -4,7 +4,7 @@
 
 {% set title = 'Pastes' %}
 
-{% block container %}
+{% block content %}
 	<table class="table table-striped table-hover rowlink" data-link="row">
 		<thead>
 			<tr>
