--- a/templates/view/code.html
+++ b/templates/view/code.html
@@ -11,6 +11,6 @@
 	<script>prettyPrint();</script>
 {% endblock %}
 
-{% block container %}
+{% block content %}
 	<pre class="prettyprint">{{ content }}</pre>
 {% endblock %}
