--- a/templates/bootstrap.html
+++ b/templates/bootstrap.html
@@ -4,33 +4,33 @@
         {%- block html %}
             <head>
                 {%- block head %}
-                    <title>{% block title %}{% endblock title %}</title>
+                    <title>{% block title %}{% endblock %}</title>
 
                     {%- block metas %}
                         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-                    {%- endblock metas %}
+                    {%- endblock %}
 
                     {%- block styles %}
                         <!-- Bootstrap -->
                         <link href="{{ url_for('.static', filename='bower_components/bootstrap/dist/css/bootstrap.min.css') }}" rel="stylesheet" media="screen">
-                    {%- endblock styles %}
-                {%- endblock head %}
+                    {%- endblock %}
+                {%- endblock %}
             </head>
             <body{% block body_attribs %}{% endblock body_attribs %}>
                 {% block body -%}
                     {% block navbar %}
-                    {%- endblock navbar %}
-                    {% block content -%}
-                    {%- endblock content %}
+                    {%- endblock %}
+                    {% block container -%}
+                    {%- endblock %}
                     {% block footer -%}
-                    {%- endblock footer %}
+                    {%- endblock %}
 
                     {% block scripts %}
                         <script src="{{ url_for('.static', filename='bower_components/jquery/dist/jquery.min.js') }}"></script>
                         <script src="{{ url_for('.static', filename='bower_components/bootstrap/dist/js/bootstrap.min.js') }}"></script>
-                    {%- endblock scripts %}
-                {%- endblock body %}
+                    {%- endblock %}
+                {%- endblock %}
             </body>
-        {%- endblock html %}
+        {%- endblock %}
     </html>
 {% endblock doc -%}
