--- a/templates/delete.html
+++ b/templates/delete.html
@@ -6,7 +6,7 @@
 	Delete '{{ title|trim }}'
 {% endblock %}
 
-{% block container %}
+{% block content %}
 	<p>Are you sure you want to delete this paste? There is no going back!</p>
 	<form class="form-horizontal" method="post">
 		<fieldset>
