--- a/templates/history.html
+++ b/templates/history.html
@@ -25,7 +25,7 @@
 						{{ macros.link_to(commit.summary, 'view', rid=repo.id, rev=commit.hexsha) }}
 					</td>
 					<td>
-						{{ commit.committed_date|timedelta }} 
+						{{ commit.committed_date|format_timedelta }} 
 					</td>
 				</tr>
 			{% endfor %}
