--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
 	<div class="navbar navbar-inverse navbar-fixed-top navbar-primary" role="navigation">
 		<div class="container">
 			<div class="navbar-header">
-				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-primary">
 					<span class="sr-only">Toggle navigation</span>
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
@@ -35,7 +35,7 @@
 				</button>
 				{{ macros.link_to('PasteGit', 'index', class='navbar-brand') }}
 			</div>
-			<div class="collapse navbar-collapse">
+			<div id="navbar-collapse-primary" class="collapse navbar-collapse">
 				<ul class="nav navbar-nav navbar-right">
 					{% block menu %}
 						{% if g.user.can_create() %}
@@ -56,24 +56,24 @@
 		<div class="navbar navbar-inverse navbar-fixed-top navbar-secondary" role="navigation">
 			<div class="container">
 				<div class="navbar-header">
-					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-secondary">
 						<span class="sr-only">Toggle navigation</span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
 				</div>
-				<div class="collapse navbar-collapse">
+				<div id="navbar-collapse-secondary" class="collapse navbar-collapse">
 					<ul class="nav navbar-nav narbar-right">
 						{% block submenu %}
 							{{ macros.menu_for('View', 'view', rid=repo.id, rev=repo.rev.hexsha) }}
-							{% if repo is defined and g.user.can_edit(repo) %}
+							{% if g.user.can_edit(repo) %}
 								{{ macros.menu_for('Edit', 'edit', rid=repo.id) }}
 							{% endif %}
-							{% if repo is defined and g.user.can_delete(repo) %}
+							{% if g.user.can_delete(repo) %}
 								{{ macros.menu_for('Delete', 'delete', rid=repo.id) }}
 							{% endif %}
-							{% if repo is defined and repo.has_history %}
+							{% if repo.has_history %}
 								{{ macros.menu_for('History', 'history', rid=repo.id, rev=repo.rev.hexsha) }}
 							{% endif %}
 						{% endblock %}
