--- a/templates/base.html
+++ b/templates/base.html
@@ -39,13 +39,13 @@
 				<ul class="nav navbar-nav navbar-right">
 					{% block menu %}
 						{% if g.user.can_create() %}
-							{{ macros.menu_for('New Paste', 'new') }}
+							{{ macros.menu_for('New Paste', 'plus', 'new') }}
 						{% endif %}
-						{{ macros.menu_for('List Pastes', 'list') }}
+						{{ macros.menu_for('List Pastes', 'list', 'list') }}
 						{% if g.user.is_anon() %}
-							{{ macros.menu_for('Login', 'login') }}
+							{{ macros.menu_for('Login', 'user', 'login') }}
 						{% else %}
-							{{ macros.menu_for('Logout', 'logout') }}
+							{{ macros.menu_for('Logout', 'user', 'logout') }}
 						{% endif %}
 					{% endblock %}
 				</ul>
@@ -66,15 +66,15 @@
 				<div id="navbar-collapse-secondary" class="collapse navbar-collapse">
 					<ul class="nav navbar-nav narbar-right">
 						{% block submenu %}
-							{{ macros.menu_for('View', 'view', rid=repo.id, rev=repo.rev.hexsha) }}
+							{{ macros.menu_for('View', 'eye-open', 'view', rid=repo.id, rev=repo.rev.hexsha) }}
 							{% if g.user.can_edit(repo) %}
-								{{ macros.menu_for('Edit', 'edit', rid=repo.id) }}
+								{{ macros.menu_for('Edit', 'pencil', 'edit', rid=repo.id) }}
 							{% endif %}
 							{% if g.user.can_delete(repo) %}
-								{{ macros.menu_for('Delete', 'delete', rid=repo.id) }}
+								{{ macros.menu_for('Delete', 'trash', 'delete', rid=repo.id) }}
 							{% endif %}
 							{% if repo.has_history %}
-								{{ macros.menu_for('History', 'history', rid=repo.id, rev=repo.rev.hexsha) }}
+								{{ macros.menu_for('History', 'calendar', 'history', rid=repo.id, rev=repo.rev.hexsha) }}
 							{% endif %}
 						{% endblock %}
 					</ul>
