--- a/templates/view.html
+++ b/templates/view.html
@@ -2,6 +2,27 @@
 
 {% set active_page = 'view' %}
 
+{% block styles %}
+	{{ super() }}
+	<link rel="stylesheet" type="text/css" href="{{ url_for('.static', filename='bower_components/x-editable/dist/bootstrap3-editable/css/bootstrap-editable.css') }}" media="screen" />
+{% endblock %}
+
+{% block scripts %}
+	{{ super() }}
+	<script src="{{ url_for('.static', filename='bower_components/x-editable/dist/bootstrap3-editable/js/bootstrap-editable.min.js') }}" type="text/javascript"></script>
+	<script src="{{ url_for('.static', filename='js/view.js') }}" type="text/javascript"></script>
+{% endblock %}
+
+{% block title %}
+	{{ super() }}
+	<span class="tag-container">
+		<span id="tag" class="editable" data-type="text" data-emptytext="Untagged" data-url="{{ url_for('releases', rid=repo.id, rev=repo.rev.hexsha) }}" data-send="always" data-mode="pupup" data-placement="left">
+			{{ repo.revtag.name }}
+		</span>
+		<span class="glyphicon glyphicon-tag"></span>
+	</span>
+{% endblock %}
+
 {% block messages %}
 	{{ super() }}
 	{% if repo.rev != repo.head.commit %}
