--- a/templates/view/markdown.html
+++ b/templates/view/markdown.html
@@ -9,7 +9,7 @@
 {% block scripts %}
 	{{ super() }}
 	<script src="{{ url_for('.static', filename='bower_components/marked/lib/marked.js') }}" type="text/javascript"></script>
-	<script src="{{ url_for('.static', filename='js/view.js') }}" type="text/javascript"></script>
+	<script src="{{ url_for('.static', filename='js/markdown.js') }}" type="text/javascript"></script>
 	<script src="{{ url_for('.static', filename='js/toc.js') }}" type="text/javascript"></script>
 {% endblock %}
 
