--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,22 +1,12 @@
-/* Navbar spacing */
-body {
-	padding-top: 64px;
-}
-
 /* Navbar styling */
 .navbar-primary {
 	z-index: 2;
+	margin-bottom: 0;
 }
-
 .navbar-secondary {
-	top: 50px;
 	background-color: #444;
 	border-color: #282828;
 	z-index: 1;
-}
-
-.navbar-secondary + .container {
-	margin-top: 50px;
 }
 
 /* Page title */
