--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
 {% endblock %}
 
 {% block navbar %}
-	<div class="navbar navbar-inverse navbar-fixed-top navbar-primary" role="navigation">
+	<div class="navbar navbar-inverse navbar-static-top navbar-primary" role="navigation">
 		<div class="container">
 			<div class="navbar-header">
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-primary">
@@ -53,7 +53,7 @@
 		</div>
 	</div>
 	{% if repo is defined and (g.user.can_edit(repo) or g.user.can_delete(repo) or repo.has_history) %}
-		<div class="navbar navbar-inverse navbar-fixed-top navbar-secondary" role="navigation">
+		<div class="navbar navbar-inverse navbar-static-top navbar-secondary" role="navigation">
 			<div class="container">
 				<div class="navbar-header">
 					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-secondary">
@@ -64,7 +64,7 @@
 					</button>
 				</div>
 				<div id="navbar-collapse-secondary" class="collapse navbar-collapse">
-					<ul class="nav navbar-nav narbar-right">
+					<ul class="nav navbar-nav">
 						{% block submenu %}
 							{{ macros.menu_for('View', 'eye-open', 'view', rid=repo.id, rev=repo.rev.hexsha) }}
 							{% if g.user.can_edit(repo) %}
