Properly affixed the table of contents

--- a/templates/view/markdown.html
+++ b/templates/view/markdown.html
@@ -16,7 +16,7 @@
 {% block content %}
 	<div id="markdown" class="markdown hidden">{{ content|safe }}</div>
 	<div id="toc" class="bs-docs-sidebar col-xs-1 toc">
-		<ul class="nav nav-stacked fixed">
+		<ul class="nav nav-stacked" data-spy="affix" data-offset-top="130">
 		</ul>
 	</div>
 {% endblock %}
