Added a warning to the the language selection box indicating that this cannot be changed after paste creation.

--- a/templates/edit.html
+++ b/templates/edit.html
@@ -44,6 +44,7 @@
 							{% endfor %}
 						</select>
 					</div>
+					<span class="help-block">This <strong>CANNOT</strong> be changed once the paste is created!</span>  
 				</div>
 			{% endif %}
 
