--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,10 @@
 	{% endif %}
 {% endif %}
 
+{% block title %}
+	{{ title }}
+{% endblock %}
+
 {% block styles %}
 	{{ super() }}
 	<link rel="stylesheet" type="text/css" href="{{ url_for('.static', filename='bower_components/bootstrap-jasny/dist/css/jasny-bootstrap.min.css') }}" media="screen "/>
@@ -99,7 +103,7 @@
 
 		<div class="page-header">
 			<h1>
-				{% block title %}
+				{% block pageheader %}
 					{{ title }}
 				{% endblock %}
 			</h1>
