--- a/templates/view.html
+++ b/templates/view.html
@@ -11,7 +11,7 @@
 	<script src="{{ url_for('.static', filename='js/view.js') }}" type="text/javascript"></script>
 {% endblock %}
 
-{% block title %}
+{% block pageheader %}
 	{{ super() }}
 	<span class="tag-container">
 		<span id="tag" {% if g.user.can_edit(repo) %} class="editable" {% endif %} data-type="text" data-emptytext="Untagged" data-url="{{ url_for('releases', rid=repo.id, rev=repo.rev.hexsha) }}" data-send="always" data-mode="pupup" data-placement="left">
